[package]
name = "riot"
version = "0.1.0"
authors = ["Alexander Adewole <alex@bizarre.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
config = "0.9"
riven = "0.2.0"
serde_derive = "^1.0.8"
serde = "^1.0.8"
colored = "1.9.1"
tokio = { version = "0.2", features = ["full"] }